--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jasmine-sinon": "^0.4.0",
     "mocha": "^2.1.0",
     "mock-fs": "^2.3.2",
+    "rewire": "^2.1.3",
     "rimraf": "^2.2.8",
     "sinon": "^1.12.2"
   }
