Updated license and cleanup

--- a/package.json
+++ b/package.json
@@ -7,28 +7,23 @@
     "test": "jasmine"
   },
   "keywords": [
-    "gulp",
     "plugin",
     "watch",
-    "build"
+    "build",
+    "utility",
+    "globbing",
+    "tree"
   ],
   "author": "Riviera Partners",
-  "license": "ISC",
+  "license": "BSD",
   "dependencies": {
     "glob": "^4.3.2",
-    "gulp": "^3.8.10",
     "minimatch": "^2.0.1",
     "watch": "^0.13.0"
   },
   "devDependencies": {
-    "chai": "^1.10.0",
-    "fs.extra": "^1.3.0",
     "jasmine": "^2.1.1",
     "jasmine-sinon": "^0.4.0",
-    "mocha": "^2.1.0",
-    "mock-fs": "^2.3.2",
-    "rewire": "^2.1.3",
-    "rimraf": "^2.2.8",
     "sinon": "^1.12.2"
   }
 }
